# matchgates

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package-windows.yml  python-package.yml
examples/: custom_circuits.ipynb  custom_noise.ipynb  noiseless_circuits.ipynb  noisy_circuits.ipynb
examples/scripts/: noisy_circuits.py
sbatch_scripts/run_noisy_circuits/: run_noisy_circuits.sbatch
src/MatchGates/: __init__.py  circuit.py  expectations.py  generators.py  matchgate.py  observables.py  operators.py
src/matchgates/: __init__.py  circuit.py  expectations.py  generators.py  matchgate.py  observables.py  operators.py
tests/: circuit_test.py  expectation_test.py  generators_test.py  matchgate_test.py  observables_test.py  operator_test.py
