[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "matchgates"
authors = [
    {name = "Anthony P. Thompson", email = "anthony.peter.thompson@pm.me"},
    ]
version = "0.1"
description = "A simulator for pure and noisy matchgate circuits."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=2.1.0",
    "scipy>=1.14.1",
    "pytest >= 8.1.1",
    "pre-commit",
    "typing_extensions==3.10.0.2",
    "pandas==2.2.2"
]
